cabal-version: 1.12
name:          aeisxcbrdg-lcjurvvojz-lezuipxdai
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        aeson -any,
        aeson-qq -any,
        base -any,
        bytestring -any,
        ed25519 -any,
        jose -any,
        lens -any,
        lens-aeson -any,
        memory -any,
        monad-time -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        time -any,
        unliftio -any,
        uuid -any

test-suite qaczkochlb-qtmvcbbdxt-tzdofgvbfk
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        aeson -any,
        aeson-qq -any,
        base -any,
        bytestring -any,
        ed25519 -any,
        hspec -any,
        interpolate -any,
        jose -any,
        lens -any,
        lens-aeson -any,
        memory -any,
        monad-time -any,
        aeisxcbrdg-lcjurvvojz-lezuipxdai -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        opmzrinbix-dwnjuztviv-lhnefavumr -any,
        time -any,
        unliftio -any,
        unordered-containers -any,
        uuid -any
