cabal-version: 3.0
name:          afterjznqu-mkszchedmv-cemvtpwxvm
version:       0.0.0.0
build-type:    Custom

custom-setup
    setup-depends:
        base -any,
        Cabal -any,
        cabal-auto-expose -any

library
    default-language:   Haskell2010
    default-extensions:
        NoImplicitPrelude NoMonomorphismRestriction BlockArguments CPP
        ConstraintKinds DataKinds DeriveAnyClass DeriveDataTypeable
        DeriveGeneric DerivingStrategies DerivingVia EmptyDataDecls
        FlexibleContexts FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings
        PackageImports QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeOperators
        ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        base -any,
        hspec -any,
        hspec-expectations -any
