cabal-version: 3.0
name:          aiboxtftww-twgwqzwbgz-dczjcqumyf
version:       0.0.0.0
build-type:    Simple

custom-setup
    setup-depends:
        base -any,
        Cabal -any,
        cabal-auto-expose -any

library
    default-language:   Haskell2010
    default-extensions:
        NoImplicitPrelude DataKinds DeriveAnyClass DeriveGeneric
        DerivingStrategies DerivingVia FlexibleContexts FlexibleInstances
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        OverloadedStrings QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeOperators

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        zvxosjlaim-rilcnymlpm-zokgocnrdo -any,
        base -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        containers -any,
        zyjfwoiclj-qxpuxvslbs-twihlsityy -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        toqjmgsrfv-nouqirkvuc-ubtevxrbsz -any,
        generics-sop -any,
        lens -any,
        mmorph -any,
        semver -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        squeal-postgresql -any,
        text -any,
        time -any,
        transformers -any,
        unliftio -any,
        unliftio-core -any,
        uuid -any

test-suite zczxarcbck-ahwtxlifsy-kmmbesnybw
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        NoImplicitPrelude DataKinds DeriveAnyClass DeriveGeneric
        DerivingStrategies DerivingVia FlexibleContexts FlexibleInstances
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        OverloadedStrings QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeOperators

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        zvxosjlaim-rilcnymlpm-zokgocnrdo -any,
        base -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        containers -any,
        zyjfwoiclj-qxpuxvslbs-twihlsityy -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        toqjmgsrfv-nouqirkvuc-ubtevxrbsz -any,
        generics-sop -any,
        lens -any,
        mmorph -any,
        semver -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        squeal-postgresql -any,
        text -any,
        time -any,
        transformers -any,
        unliftio -any,
        unliftio-core -any,
        uuid -any,
        aiboxtftww-twgwqzwbgz-dczjcqumyf -any,
        hedgehog -any,
        monad-logger -any
