cabal-version: 1.12
name:          akgvmhdcfs-edgsqlgfhp-ducbdjoqto
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        ConstraintKinds DeriveGeneric DataKinds DerivingStrategies
        DerivingVia EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedLabels OverloadedStrings
        PartialTypeSignatures QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeFamilyDependencies
        TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -Wall -Werror -fwarn-tabs -threaded -rtsopts

    build-depends:
        base -any,
        classy-prelude -any,
        monad-logger -any,
        uuid -any
