cabal-version: 1.12
name:          ambqfekzlo-giypknqooz-ybdhisbtgi
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ConstraintKinds DataKinds DefaultSignatures
        DeriveAnyClass DeriveDataTypeable DeriveGeneric DerivingStrategies
        DerivingVia EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving
        InstanceSigs LambdaCase MultiParamTypeClasses MultiWayIf
        NamedFieldPuns NoImplicitPrelude NoMonomorphismRestriction
        OverloadedStrings PackageImports RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TupleSections TypeFamilies
        TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        base -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        hedgehog -any,
        hspec -any,
        hspec-hedgehog -any,
        monad-logger -any,
        postgresql-query -any,
        postgresql-simple -any,
        resourcet -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        text -any
