cabal-version: 1.12
name:          anurrwvbsu-gdfwwlpqgg-sxleewodnh
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        ConstraintKinds DataKinds DeriveGeneric DerivingStrategies
        EmptyDataDecls FlexibleContexts FlexibleInstances GADTs
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        NamedFieldPuns NoMonomorphismRestriction OverloadedStrings
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        StandaloneDeriving TemplateHaskell TupleSections TypeApplications
        TypeFamilies TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        base -any,
        case-insensitive -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        containers -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        ohouqyigpw-lndaiynzye-fcsmggspsv -any,
        jyikfaivsc-mhchvgdmxv-qdqsrsnxmt -any,
        file-path-th -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        network-uri -any,
        servant -any,
        servant-docs -any,
        servant-multipart -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        ixtkyqihkv-imljloiqex-augjcvzgch -any,
        text -any,
        time -any,
        transformers -any,
        uuid -any

test-suite uhezingodp-kbbfjucjil-xsfhgpdmlu
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        ConstraintKinds DataKinds DeriveGeneric DerivingStrategies
        EmptyDataDecls FlexibleContexts FlexibleInstances GADTs
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        NamedFieldPuns NoMonomorphismRestriction OverloadedStrings
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        StandaloneDeriving TemplateHaskell TupleSections TypeApplications
        TypeFamilies TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        base -any,
        case-insensitive -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        containers -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        anurrwvbsu-gdfwwlpqgg-sxleewodnh -any,
        ohouqyigpw-lndaiynzye-fcsmggspsv -any,
        jyikfaivsc-mhchvgdmxv-qdqsrsnxmt -any,
        file-path-th -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        network-uri -any,
        servant -any,
        servant-docs -any,
        servant-multipart -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        ixtkyqihkv-imljloiqex-augjcvzgch -any,
        text -any,
        time -any,
        transformers -any,
        uuid -any
