cabal-version: 1.12
name:          apgymziwpt-hfuoxfazde-mduxjobqdb
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language: Haskell2010
    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        aeson -any,
        base -any,
        named -any,
        sop-core -any,
        text -any,
        time -any,
        uuid -any
