cabal-version: 1.12
name:          avffwahegf-oqtbqrvtos-mvxypgiome
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        CPP ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
        DerivingStrategies DerivingVia EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        StandaloneDeriving TemplateHaskell TupleSections TypeApplications
        TypeFamilies TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        aeson -any,
        base -any,
        classy-prelude -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        file-path-th -any,
        lens -any,
        monad-logger -any,
        persistent -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        postgresql-simple -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        time -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        yesod -any

test-suite kjbpxnwdmr-nzcpultmhn-iwfjcbtlhe
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        CPP ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
        DerivingStrategies DerivingVia EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedStrings PackageImports
        QuasiQuotes RankNTypes RecordWildCards ScopedTypeVariables
        StandaloneDeriving TemplateHaskell TupleSections TypeApplications
        TypeFamilies TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        aeson -any,
        aeson-qq -any,
        base -any,
        classy-prelude -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        file-path-th -any,
        hspec -any,
        hspec-expectations -any,
        mbpugskatb-tiyjwpvxro-njveyigxha -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        lens -any,
        monad-logger -any,
        persistent -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        postgresql-simple -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        resource-pool -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        opmzrinbix-dwnjuztviv-lhnefavumr -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        tasty -any,
        time -any,
        gymqqiksln-ycqlesvmbu-mrzmpdrmlm -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        vbltcnoepb-bhzritxypd-erpaaootbj -any,
        ojfbtzpcfi-apxmpdnheh-xufedojzlq -any,
        yesod -any
