cabal-version: 1.12
name:          avvnstljbf-eqvbiqanvb-epetargzft
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        ConstraintKinds DeriveGeneric DataKinds DeriveDataTypeable
        DerivingStrategies DerivingVia EmptyDataDecls FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
        MultiWayIf NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction OverloadedLabels OverloadedStrings
        PartialTypeSignatures QuasiQuotes RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell
        TupleSections TypeApplications TypeFamilies TypeFamilyDependencies
        TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        base -any,
        classy-prelude -any,
        idgzpedoaf-dbfjwldocy-karcmrrnvw -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        servant -any,
        servant-client -any,
        servant-client-core -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any
