cabal-version: 1.12
name:          axwjpkrvbz-tjiqqivkjb-vdcyriwmgb
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language: Haskell2010
    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        aeson -any,
        base -any,
        immortal -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        monad-logger -any,
        atgnezedgv-lbskucbixg-bdkbwtkusi -any,
        postgresql-simple -any,
        safe-exceptions -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        stm -any,
        apgymziwpt-hfuoxfazde-mduxjobqdb -any,
        text -any,
        time -any,
        uuid -any

test-suite lljslecoft-qqokycdpqd-whkzqxmdoq
    type:             exitcode-stdio-1.0
    main-is:          main.hs
    default-language: Haskell2010
    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        aeson -any,
        base -any,
        jyuidzkmwm-xyxsdmyakh-ahvfbxeaha -any,
        hspec -any,
        mbpugskatb-tiyjwpvxro-njveyigxha -any,
        immortal -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        monad-logger -any,
        atgnezedgv-lbskucbixg-bdkbwtkusi -any,
        postgresql-simple -any,
        safe-exceptions -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        opmzrinbix-dwnjuztviv-lhnefavumr -any,
        stm -any,
        apgymziwpt-hfuoxfazde-mduxjobqdb -any,
        axwjpkrvbz-tjiqqivkjb-vdcyriwmgb -any,
        text -any,
        time -any,
        uuid -any
